...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@layout/fragment_no_tasks" />

    <Button
        android:id="@+id/advanced_date"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:theme="@style/Theme.Material3.DynamicColors.DayNight"
...
