<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"

    android:theme="@style/Theme.Successorator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/focus_switch"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-18dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:icon="@drawable/ic_menu"
            app:iconTint="@color/white" />

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/add_task"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:icon="@drawable/ic_add"
            app:iconTint="@color/white" />

    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>
